# synth_data

./: .gitignore  Experiment.ipynb  main.py  pyproject.toml
common_utils/: io_utils.py
configs/: generator.yml
generator/: base.py  config.py  periodic.py  run.py
machine_learning/Overview/: Polynomial Curve Fitting.ipynb
machine_learning/ml_utils/: model_interface.py
visualize/: helper.py
viz/: helper.py
